[package]
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
edition = "2021"
name = "micropixel"
version = "0.1.0"

[dependencies]
bytemuck = {version = "1.14.1", features = ["must_cast"]}
cpal = "0.15.2"
glow = "0.13.1"
glutin = "0.31.2"
glutin-winit = "0.4.2"
raw-window-handle = "0.5"
tinyrand = "0.5.0"
winit = {version = "0.29.2", default-features = false, features = ["rwh_05"]}

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[[example]]
name = "test"
