[package]
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
edition = "2021"
name = "micropixel"
version = "0.1.0"

[dependencies]
bytemuck = {version = "1.14.1", features = ["must_cast"]}
cpal = "0.15.2"
gl = "0.14.0"
glfw = "0.54.0"
raw-window-handle = "0.5"
tinyrand = "0.5.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[target.stable-x86_64-pc-windows-gnu]
ar = "/usr/bin/x86_64-w64-mingw32-ar"
linker = "/usr/bin/x86_64-w64-mingw32-gcc"

[[example]]
name = "test"
