[package]
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "micropixel"
version = "0.1.0"

[dependencies]
bytemuck = {version = "1.14.1", features = ["must_cast"]}
cpal = "0.15.2"
gl = "0.14.0"
glfw = "0.54.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[target.stable-x86_64-pc-windows-gnu]
ar = "/usr/bin/x86_64-w64-mingw32-ar"
linker = "/usr/bin/x86_64-w64-mingw32-gcc"

[target.x86_64-apple-darwin]
ar = "x86_64-apple-darwin21.1-ar"
linker = "x86_64-apple-darwin21.1-clang"

[[example]]
name = "window"

[[example]]
name = "button"
